fixing menu of footer that was white in dark mode

--- a/theme.css
+++ b/theme.css
@@ -846,8 +846,7 @@ div.mk-header.cm-line {padding-bottom: 50px !important;}
 }
 
 .menu {
-  background: #fff;
-  border-radius: 5px;
+  border-radius: 3px;
 }
 
 .mk-menu-input input {
